[package]
name = "vagga"
version = "0.8.0"
authors = ["Paul Colomiets"]

[workspace]
members = ["path_filter"]

[dependencies]
libc = "0.2.28"
nix = "0.9.0"
sha2 = "0.3.0"
blake2 = { version="0.3.0", optional=true }
typenum = "1.5.1"
digest-writer = "0.1.1"
rand = {version="0.3.14", optional=true}
argparse = "0.2.1"
log = "0.3.6"
env_logger = "0.4.3"
url = { git="https://github.com/tailhook/rust-url", branch="remove_nonwasm_methods" }
unshare = { version="0.2.0", optional=true }
signal = { version="0.4.1", optional=true }
mopa = "0.2.2"
anymap = "0.11.1"
matches = "0.1.6"
regex = "0.2.1"
scan_dir = "0.3.1"
libmount = { version="0.1.7", optional=true }
zip = {version="0.1", optional=true}
xz2 = {version="0.1.0", optional=true}
tar = {version="0.4.8", optional=true}
flate2 = {version="0.2.13", optional=true}
bzip2 = {version="0.3.0", optional=true}
net2 = {version="0.2.23", optional=true}
humantime = "1.0.0"
quick-error = "1.2.0"
docopt = "0.8.1"
quire = "0.3.1"
lazy_static = "0.2.2"
dir-signature = { version="0.2.3", optional=true }
itertools = "0.6.1"
git2 = { version="0.6.6", default-features=false, optional=true }
path-filter = { version = "0.1.0", path = "path_filter", optional=true}
serde = { version = "1.0.11", features = ["rc"] }
serde_json = "1.0.2"
serde_derive = "1.0.11"

[features]
default = ["containers"]
containers = [
    # do not work on OS X
    "unshare", "libmount", "dir-signature",
    # do not work on wasm
    "path-filter", "rand", "net2", "signal", "git2", "blake2",
    "zip", "tar", "xz2", "flate2", "bzip2",
    ]
docker_runner = []

[profile.release]
debug = true
lto = true

[[bin]]
name = "vagga"
path = "src/main.rs"
