[package]
name = "vagga"
version = "0.8.0"
authors = ["Paul Colomiets"]

[workspace]
members = ["path_filter"]

[dependencies]
libc = "0.2.28"
nix = "0.9.0"
sha2 = "0.3.0"
blake2 = "0.3.0"
typenum = "1.5.1"
digest-writer = "0.1.1"
rand = "0.3.14"
argparse = "0.2.1"
log = "0.4.0"
env_logger = "0.5.6"
url = "1.0.0"
unshare = { version="0.2.0", optional=true }
signal = "0.4.1"
mopa = "0.2.2"
anymap = "0.11.1"
matches = "0.1.6"
regex = "0.2.1"
scan_dir = "0.3.1"
libmount = { version="0.1.7", optional=true }
zip = "0.1"
xz2 = "0.1.0"
tar = "0.4.8"
flate2 = "0.2.13"
bzip2 = "0.3.0"
net2 = "0.2.23"
humantime = "1.0.0"
quick-error = "1.2.0"
docopt = "0.8.1"
quire = { git="https://github.com/tailhook/rust-quire", rev="221cbdb" }
lazy_static = "0.2.2"
dir-signature = { version="0.2.3", optional=true }
itertools = "0.6.1"
git2 = { version="0.7.1", default-features=false }
tempfile = "2.1.5"
path-filter = { version = "0.1.0", path = "path_filter"}
serde = { version = "1.0.11", features = ["rc"] }
serde_json = "1.0.2"
serde_derive = "1.0.11"
failure = "0.1.1"
resolv-conf = "0.6.0"

[features]
default = ["containers"]
containers = ["unshare", "libmount", "dir-signature"]
docker_runner = []

[profile.release]
debug = true
lto = true

[[bin]]
name = "vagga"
path = "src/main.rs"
