[package]
name = "vagga"
version = "0.8.1"
authors = ["Paul Colomiets"]
edition = "2021"

[workspace]
members = ["path_filter"]

[profile.test]
opt-level = 2

[dependencies]
libc = "0.2.28"
nix = "0.11.0"
digest_traits = { version="0.9.0", package="digest" }
sha2 = "0.9.8"
blake2 = "0.9.2"
typenum = "1.14.0"
rand = "0.5.0"
argparse = "0.2.1"
log = "0.4.0"
env_logger = "0.5.6"
url = "1.0.0"
unshare = { version="0.5.0", optional=true }
signal = { version="0.6.0", optional=true }
mopa = "0.2.2"
anymap = "0.12.1"
matches = "0.1.6"
regex = "1.0.0"
scan_dir = "0.3.1"
libmount = { version="0.1.10", optional=true }
zip = { version="0.4.2", optional=true }
xz2 = { version="0.1.0", optional=true }
tar = { version="0.4.8", optional=true }
flate2 = { version="1.0.1", optional=true }
bzip2 = { version="0.3.0", optional=true }
net2 = { version="0.2.23", optional=true }
humantime = "1.0.0"
quick-error = "1.2.0"
docopt = "1.0.0"
quire = "0.4.1"
lazy_static = "1.0.0"
dir-signature = { git="https://github.com/tailhook/dir-signature", rev="fd6bf1b", optional=true }
itertools = "0.7.8"
git2 = { version="0.7.1", default-features=false, optional=true }
tempfile = { version="3.0.2", optional=true }
path-filter = { version = "0.1.0", path = "path_filter", optional=true }
serde = { version = "1.0.11", features = ["rc"] }
serde_json = "1.0.2"
serde_derive = "1.0.11"
failure = "0.1.1"
resolv-conf = "0.6.0"

[features]
default = ["containers"]
containers = [
    "unshare", "libmount", "signal",
    "dir-signature", "path-filter", "tempfile",
    "flate2", "xz2", "tar", "zip", "bzip2",
    "net2", "git2",
]
docker_runner = []
config_runner = []

[profile.release]
debug = true
lto = true

[[bin]]
name = "vagga"
path = "src/main.rs"
